--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 
 </head>
 
+<header> 
+    <img class="lambda-logo" src= "img\lambda-black.png">
+    <nav> 
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+    </nav>
+</header>
+
+<img class= "top-img" src= "img\jumbo.jpg">
+
 <body>
     <div class="container">
    
