--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <header> 
     <img class="lambda-logo" src= "img\lambda-black.png">
     <nav> 
-        <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="#">Products</a>
         <a href="#">Blog</a>
         <a href="#">Contact</a>
@@ -43,8 +43,8 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
+                <div class="box" id="box-1">Box 1</div>
+                <div class="box" id="box-2">Box 2</div>
                 <div class="box">Box 3</div>
                 <div class="box">Box 4</div>
                 <div class="box">Box 5</div>
